# space

./: CMakeLists.txt  chroimium.sh  main.cpp  readme.txt  run.sh
include/: 3D.h  collision.h  game.h  orbit.h  state.h  utils.h
shaders/: circle.frag  circle.vert  standard.frag  standard.vert  user.frag  user.vert
src/: 3D.cpp  camera.cpp  collision.cpp  game.cpp  main.cpp  map.cpp  objects.cpp  orbit.cpp  shaders.cpp  textures.cpp  utils.cpp  vertex.cpp
textures/: black_hole.png~  planet.png~  spaceship.png~  texture_sheet.png~
